--- a/authorization-server/build.gradle
+++ b/authorization-server/build.gradle
@@ -1,10 +1,12 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.2'
     id 'java'
     id 'application'
+    id 'org.springframework.boot' version '3.0.2'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group 'org.imd.oauth2'
+sourceCompatibility = '17'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +14,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:1.0.0"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
