--- a/authorization-server/build.gradle
+++ b/authorization-server/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework:spring-beans'
+    // implementation 'org.springframework:spring-beans'
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:1.0.0"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
