--- a/client-credentials-flow-consumer/build.gradle
+++ b/client-credentials-flow-consumer/build.gradle
@@ -19,6 +19,17 @@ repositories {
 }
 
 dependencies {
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
+    implementation "org.springframework:spring-webflux"
+    implementation "io.projectreactor.netty:reactor-netty"
+    implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity6"
+    implementation "org.webjars:webjars-locator-core"
+    implementation "org.webjars:bootstrap:3.4.1"
+    implementation "org.webjars:jquery:3.4.1"
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
