--- a/authorization-server/src/main/resources/application.yaml
+++ b/authorization-server/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+logging:
+  level:
+    root: INFO
+    org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+
 server:
   port: 9090
 
