--- a/resource-server/build.gradle
+++ b/resource-server/build.gradle
@@ -28,7 +28,31 @@ dependencies {
     implementation "org.springframework.security:spring-security-acl"
     implementation "org.springframework.security:spring-security-config"
     implementation "org.springframework:spring-context-support"
-    implementation "net.sf.ehcache:ehcache-core"
+
+    // acl cache related
+    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "com.github.ben-manes.caffeine:caffeine:3.1.5"
+
+    // jpa
+    // business logic
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+
+    // business logic
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // business logic
+    compileOnly 'org.mapstruct:mapstruct:1.3.1.Final'
+    implementation 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+    // business logic
+    // must be after lombok annotation processor in order to
+    // take into account generated getters and setters
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+    // business logic
+    runtimeOnly 'org.postgresql:postgresql'
 
     // test apps
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
