--- a/resource-server/build.gradle
+++ b/resource-server/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     // business logic
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation 'org.flywaydb:flyway-core'
 
     // business logic
     compileOnly 'org.projectlombok:lombok'
