--- a/resource-server/src/main/resources/application.yaml
+++ b/resource-server/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
 
